--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+altgraph==0.17.2
 asgiref==3.6.0
+astroid==2.11.6
 attrs==22.2.0
 autopep8==2.0.1
 certifi==2022.12.7
@@ -7,39 +9,79 @@ click==8.1.3
 colorama==0.4.6
 coreapi==2.3.3
 coreschema==0.0.4
-
+dill==0.3.5.1
 Django==4.1.6
+django-crispy-forms==1.14.0
 django-filter==22.1
+django-mail-templated==2.6.5
 django-rosetta==0.9.8
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 drf-yasg==1.21.5
-
+Faker==13.15.0
+flake8==4.0.1
 Flask==2.2.3
+future==0.18.2
 idna==3.4
 inflection==0.5.1
+isort==5.10.1
 itsdangerous==2.1.2
 itypes==1.2.0
+jedi==0.18.1
 Jinja2==3.1.2
 jsonschema==4.17.3
+lazy-object-proxy==1.7.1
 Markdown==3.4.1
 MarkupSafe==2.1.2
+mccabe==0.6.1
 packaging==23.0
+parso==0.8.3
+pefile==2022.5.30
 Pillow==9.4.0
+platformdirs==2.5.2
+pluggy==1.0.0
 polib==1.1.1
 pycodestyle==2.10.0
+pydocstyle==6.1.1
+pyflakes==2.4.0
+pygame==2.1.2
+pyinstaller==5.1
+pyinstaller-hooks-contrib==2022.7
 PyJWT==2.6.0
+pylint==2.14.3
+pyparsing==3.0.9
+PyQt6==6.3.1
+PyQt6-Qt6==6.3.1
+PyQt6-sip==13.4.0
 pyrsistent==0.19.3
+PySide6==6.3.1
+PySide6-Addons==6.3.1
+PySide6-Essentials==6.3.1
+python-dateutil==2.8.2
+python-decouple==3.7
+python-lsp-jsonrpc==1.0.0
+python-lsp-server==1.4.1
+pytoolconfig==1.1.2
 pytz==2022.7.1
+pywin32-ctypes==0.2.0
 PyYAML==6.0
 requests==2.28.2
+rope==1.2.0
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
+shiboken6==6.3.1
+six==1.16.0
+snowballstemmer==2.2.0
 sqlparse==0.4.3
 swagger-spec-validator==3.0.3
+toml==0.10.2
 tomli==2.0.1
+tomlkit==0.11.0
 typing_extensions==4.5.0
 tzdata==2022.7
+ujson==5.3.0
 uritemplate==4.1.1
 urllib3==1.26.14
 Werkzeug==2.2.3
+wrapt==1.14.1
+yapf==0.32.0
