--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ altgraph==0.17.2
 asgiref==3.6.0
 astroid==2.11.6
 attrs==22.2.0
-autopep8==2.0.1
+autopep8
 certifi==2022.12.7
 charset-normalizer==3.0.1
 click==8.1.3
@@ -19,7 +19,7 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 drf-yasg==1.21.5
 Faker==13.15.0
-flake8==4.0.1
+flake8
 Flask==2.2.3
 future==0.18.2
 idna==3.4
@@ -41,7 +41,7 @@ Pillow==9.4.0
 platformdirs==2.5.2
 pluggy==1.0.0
 polib==1.1.1
-pycodestyle==2.10.0
+pycodestyle
 pydocstyle==6.1.1
 pyflakes==2.4.0
 pygame==2.1.2
